examples/test/testpolicy5522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5522
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key5: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value1
          key23: value37
          key38: value48
      podSelector:
        matchLabels:
          key24: value12
